fix: fixed nav wrap and padding

--- a/style.css
+++ b/style.css
@@ -153,9 +153,10 @@ body {
     display: flex;
     list-style: none;
     margin: 12px 0;
+    flex-wrap: wrap;
 }
 .primary-nav li {
-    padding: 0 20px;
+    padding: 12px 20px;
 }
 .primary-nav li a {
     text-decoration: none;
